--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="intro-text left-0 text-center bg-faded p-5 rounded">
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Real Coffee</span>
-              <span class="section-heading-lower">Worth Drinking</span>
+              <span class="section-heading-lower">Real People</span>
             </h2>
             <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a Beautiful addition to your everyday routine - we 100% guarantee it!
             </p>
