--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
   
-      <span class="site-heading-lower">Coffe Sensation</span>
+      <span class="site-heading-lower">Coffee Sensation</span>
     </h1>
 
     <!-- Navigation -->
